--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/node": "^8.0.53",
+    "chai": "^4.1.2",
     "prettier": "^1.8.2",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.6.0",
