Setup yarn test

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project tsconfig.json",
-    "lint:fix": "yarn lint --fix"
+    "lint:fix": "yarn lint --fix",
+    "test": "mocha src/**/*.test.ts"
   },
   "dependencies": {
     "flow-parser": "^0.59.0"
